--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="Categoria">
 
-        <h2> Filmes e Séries</h2>
+        <h2> Análise de Filmes e Séries</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=apCLNZ20ZKE">
                 <img src="https://img.youtube.com/vi/apCLNZ20ZKE/maxresdefault.jpg" />
